fix: 'Copy to Clipboard' icon covers code

--- a/custom/less/plugin-solarized-light.less
+++ b/custom/less/plugin-solarized-light.less
@@ -18,7 +18,7 @@
 .prettyprint {
   position: relative;
   background-color: #fdf6e3;
-  padding: 10px;
+  padding: 10px 24px 10px 10px;
 
   &.active {
     animation-duration: 1s;
